tests/ui/methods/ambig-method-call-in-trait-impl.stderr
error[E0034]: multiple applicable items in scope
  --> $DIR/ambig-method-call-in-trait-impl.rs:19:14
   |
LL |         self.to_int() + other.to_int()
   |              ^^^^^^ multiple `to_int` found
   |
note: candidate #1 is defined in an impl of the trait `Add` for the type `isize`
  --> $DIR/ambig-method-call-in-trait-impl.rs:17:5
   |
LL |     fn to_int(&self) -> isize { *self }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl of the trait `ToPrimitive` for the type `isize`
  --> $DIR/ambig-method-call-in-trait-impl.rs:5:5
   |
LL |     fn to_int(&self) -> isize { 0 }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
help: disambiguate the method for candidate #1
   |
LL -         self.to_int() + other.to_int()
LL +         Add::to_int(&self) + other.to_int()
   |
help: disambiguate the method for candidate #2
   |
LL -         self.to_int() + other.to_int()
LL +         ToPrimitive::to_int(&self) + other.to_int()
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0034`.
